syntax = "proto3";

package auth;

option go_package="./;auth";

message AuthByCredentialsRequest {
  string email = 1;
  string password = 2;
}

message AuthByAccessTokenRequest {
  string token = 1;
}

message OkResponse {
  string ok = 1;
}

service AuthService {
  rpc AuthByCredentials(AuthByCredentialsRequest) returns (OkResponse) {};
  rpc AuthByAccessToken(AuthByAccessTokenRequest) returns (OkResponse) {};
}